# blockchain_password_manager

./: .gitignore  .tool-versions  Anchor.toml  README.md  package.json
.github/workflow/: ci.yml
.github/workflows/: ci.yml  cl.yml
frontend/blockchain_password_manager/: package.json  tailwind.config.js
frontend/blockchain_password_manager/public/: index.html  manifest.json
frontend/blockchain_password_manager/src/: App.css  App.js  index.css
frontend/blockchain_password_manager/src/blockchain/: blockchain_password_manager.json  config.js  provider.js  vault.js  walletContext.js
frontend/blockchain_password_manager/src/components/: EntryForm.js  Loading.jsx  ParticlesBackground.jsx  Sidebar.jsx  Topbar.jsx  WalletConnect.js
frontend/blockchain_password_manager/src/components/LandingPage/Buttons/: ButtonPrimary.jsx  ButtonSecondary.jsx
frontend/blockchain_password_manager/src/components/LandingPage/Hero/: HeroBadge.jsx  HeroButtons.jsx  (+3 more)
frontend/blockchain_password_manager/src/components/Vault/: VaultAuth.jsx  VaultContainer.jsx  VaultEmpty.jsx  VaultEntryCard.jsx  VaultEntryForm.jsx  VaultEntryList.jsx  VaultHeader.jsx  VaultInitForm.jsx  VaultSearchEntries.jsx  VaultUnlockForm.jsx
frontend/blockchain_password_manager/src/pages/: Home.js  LandingPage.js  Layout.jsx  PasswordGenerator.jsx  Settings.jsx  Vault.js  Vault.jsx
frontend/blockchain_password_manager/src/utils/: validation.js  vaultErrors.js
programs/blockchain_password_manager/: Cargo.toml
programs/blockchain_password_manager/src/: lib.rs
tests/: blockchain_password_manager.ts
(+2 files in other folders)
